Change log

1.24: Fixed a bug parsing draw/new with no line descriptions.  Thanks to
Robert W. Numrich for spotting it.

Cygwin seems to need errno.h to declare errno in grap_lex.l. I added the
machinery to look for it and use it if it's there.  I also added a couple
missing semi-colons to grap.y to shut bison up.

1.23: made it possible to disable sprintf and other calls to sprintf(3)
with a user given format string, which is a potential security hole.

Fixed a plot bug I found while diaabling that.

1.22: John Heidemann caught a bug with respect to large sizes and size
changes in titles.  Those large szie changes are now supported.  Generally
the groff [] syntax is now used for the embedded \s commans that size
generates.  This can be turned off by using -C.

John also wanted to be able to specify string modifiers like size, etc.
on ticks.  Now ticks, grids, and plot strings (e.g. in a new or draw
statement) all take string modifiers.  grap.defines has been changed to
support and encourage this usage.

A bug where a null graph was output when only a draw statement was given
has been corrected.

sprintf processing has been revamped to more directly follow sprintf
syntax.  As a result, a limitation on the number of parameters (10) has
been introduced.

As a result of using string attributes on plotting strings, the name of
the default line has become user-visible.  Changing
grap_internal_default via new will change the default lines for the rest
of the graph.  It's not encouraged.

1.21: Allow redefinition of keywords as macros.  In the process, I
added an undefine keyword to do the obvious: remove a macro.

Added xy_gg macros, too.

Fixed a bug where giving a coordinate name before a parenthesized point
caused a syntax error.  Thanks to Kees Zeelenberg for spotting this.

Added an srand function to seed the random number generator, though
there's none documented in Kernighan and Bentley's grap, and a getpid