@@ -7,6 +7,9 @@ Cygwin seems to need errno.h to declare errno in grap_lex.l. I added the
 machinery to look for it and use it if it's there.  I also added a couple
 missing semi-colons to grap.y to shut bison up.
 
+Added the clipped and unclipped attributes to allow plot statements to place
+strings outside the frame.
+
 1.23: made it possible to disable sprintf and other calls to sprintf(3)
 with a user given format string, which is a potential security hole.
 
